# ticket-processor

./: .env.example  .gitignore  ANALYSIS.md  ARCHITECTURE.md  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  run_processor.sh  supabase_config.json.example  ticket_processor.py
configs/: supabase_schema.sql
scripts/: run_processor.py  run_webhook.py
src/ticket_processor/: __init__.py  config.py
src/ticket_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ticket_processor/application/: dtos.py
src/ticket_processor/application/services/: __init__.py  classification_service.py  email_processor_service.py  ticket_processor_service.py
src/ticket_processor/application/use_cases/: __init__.py  process_email_use_case.py  process_webhook_use_case.py  sync_purchases_use_case.py
src/ticket_processor/domain/: __init__.py  exceptions.py  models.py  ports.py
src/ticket_processor/domain/classifiers/: __init__.py  base.py  llm_classifier.py
src/ticket_processor/infrastructure/config/: container.py
src/ticket_processor/infrastructure/email/: gmail_adapter.py  gog_client.py
src/ticket_processor/infrastructure/llm/: openrouter_client.py
src/ticket_processor/infrastructure/logging/: setup.py
src/ticket_processor/infrastructure/parser/: llm_parser.py  pdf_parser.py  text_parser.py
src/ticket_processor/infrastructure/storage/: sheets_adapter.py  supabase_adapter.py
tests/: conftest.py
tests/unit/application/: test_ticket_processor_service.py
tests/unit/domain/: test_classifiers.py  test_models.py
tests/unit/infrastructure/: test_gmail_adapter.py
