[project]
name = "ticket-processor"
version = "0.1.0"
description = "Professional supermarket ticket processor with Gmail, Sheets, Supabase integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Rodrigo", email = "rodrigo@example.com"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "requests>=2.32,<3",
    "structlog>=24.1,<25",
    "pypdf>=4.0,<5",
    "tenacity>=8.2,<9",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-mock>=3.14,<4",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-requests>=2.31,<3",
    "pre-commit>=3.7,<4",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20", "ARG", "PTH"]
ignore = ["S101", "ARG001", "ARG002"]
fixable = ["ALL"]
unfixable = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config -ra"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require external services)",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/ticket_processor"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=68,<69", "wheel"]
build-backend = "setuptools.build_meta"
